OO-3961: remove the optimization for relations of published groups
Remove the optimization which loads the offers of published groups as it
seems that Hibernate 5.4 struggled with the join