@@ -203,11 +203,10 @@ public class BusinessGroupDAO {
 		  .append(" inner join fetch bgi.resource resource")
 		  .append(" where bgi.key in (:ids)");
 
-		List<BusinessGroup> groups = dbInstance.getCurrentEntityManager()
+		return dbInstance.getCurrentEntityManager()
 				.createQuery(sb.toString(), BusinessGroup.class)
 				.setParameter("ids", ids)
 				.getResultList();
-		return groups;
 	}
 	
 	public List<BusinessGroup> loadAll() {
@@ -215,10 +214,9 @@ public class BusinessGroupDAO {
 		sb.append("select bgi from businessgroup bgi ")
 		  .append(" inner join fetch bgi.resource resource");
 
-		List<BusinessGroup> groups = dbInstance.getCurrentEntityManager()
+		return dbInstance.getCurrentEntityManager()
 				.createQuery(sb.toString(), BusinessGroup.class)
 				.getResultList();
-		return groups;
 	}
 	
 	public BusinessGroup loadByResourceId(Long resourceId) {
@@ -1001,7 +999,7 @@ public class BusinessGroupDAO {
 		if(StringHelper.containsNonWhitespace(params.getIdRef())) {
 			if(StringHelper.isLong(params.getIdRef())) {
 				try {
-					Long id = new Long(params.getIdRef());
+					Long id = Long.valueOf(params.getIdRef());
 					query.setParameter("idRefLong", id);
 				} catch (NumberFormatException e) {
 					//not a real number, can be a very long numerical external id
@@ -1040,9 +1038,9 @@ public class BusinessGroupDAO {
 		boolean memberOnly = params.isAttendee() || params.isOwner() || params.isWaiting();
 		
 		if(memberOnly) {
-			sb.append("inner join bGroup.members as memberships on memberships.identity.key=:identityKey and memberships.role in (:roles)");	
+			sb.append("inner join bGroup.members as memberships on (memberships.identity.key=:identityKey and memberships.role in (:roles))");	
 		} else if(includeMemberships) {
-			sb.append("left join bGroup.members as memberships on memberships.identity.key=:identityKey");	
+			sb.append("left join bGroup.members as memberships on (memberships.identity.key=:identityKey)");	
 		}
 		
 		//coach / owner
@@ -1209,8 +1207,6 @@ public class BusinessGroupDAO {
 			  .append(" inner join bGroup.members as membership on membership.identity.key=:identityKey");
 		} else if(keyToGroup.size() < RELATIONS_IN_LIMIT) {
 			sr.append(" where bgi.key in (:businessGroupKeys)");
-		} else if(params.getPublicGroups() != null && params.getPublicGroups().booleanValue()) {
-			sr.append(" inner join acoffer as offer on (bgi.resource.key = offer.resource.key)");
 		} else if(params.getRepositoryEntry() != null) {
 			sr.append(" inner join repoentrytobusinessgroup as refBgiToGroup")
 			  .append("   on (refBgiToGroup.entry.key=:repositoryEntryKey and bgi.baseGroup.key=refBgiToGroup.businessGroup.key)");
@@ -1230,8 +1226,6 @@ public class BusinessGroupDAO {
 				businessGroupKeys.add(businessGroupKey);
 			}
 			resourcesQuery.setParameter("businessGroupKeys", businessGroupKeys);
-		} else if(params.getPublicGroups() != null && params.getPublicGroups().booleanValue()) {
-			//no parameters to add
 		} else if(params.getRepositoryEntry() != null) {
 			resourcesQuery.setParameter("repositoryEntryKey", params.getRepositoryEntry().getKey());
 		} else {
